# sdks

./: .gitignore  LICENSE  README.md  package.json
sdks/rust/rest/: Cargo.toml  README.md  reference.md
sdks/rust/rest/.fern/: metadata.json
sdks/rust/rest/src/: client.rs  config.rs  error.rs  lib.rs  prelude.rs
sdks/rust/rest/src/api/: mod.rs
sdks/rust/rest/src/api/resources/: mod.rs
sdks/rust/rest/src/api/resources/api_keys/: api_keys.rs  mod.rs
sdks/rust/rest/src/api/resources/channels/: channels.rs  mod.rs
sdks/rust/rest/src/api/resources/longpoll/: longpoll.rs  mod.rs
sdks/rust/rest/src/api/resources/postgres/: mod.rs  postgres.rs
sdks/rust/rest/src/api/resources/projects/: mod.rs  projects.rs
sdks/rust/rest/src/api/resources/sse/: mod.rs  (+1 more)
sdks/rust/rest/src/api/types/: analytics_query_request.rs  api_key_list_item.rs  api_key_list_response.rs  api_key_scope.rs  channel_list_response.rs  channel_summary.rs  connect_query_request.rs  connection_info.rs  create_api_key_request.rs  create_api_key_response.rs  create_project_request.rs  create_project_response.rs  create_webhook_request.rs  error_body.rs  mod.rs  not_ready_response.rs  plan_limit_error_body.rs  presence_response.rs  project_response.rs  publish_request.rs  publish_response.rs  readyz_response.rs  revoke_api_key_response.rs  tier.rs  update_project_tier_request.rs  update_project_tier_response.rs  webhook_created_response.rs  webhook_delete_response.rs  webhook_delivery_item.rs  webhook_delivery_list_response.rs  webhook_list_response.rs  webhook_summary.rs  webhook_test_response.rs
(+769 files in other folders)
