[package]
name = "brume_rest"
version = "0.1.0"
edition = "2021"
description = "Official Brume Realtime Gateway REST client for Rust. Brume is a realtime gateway for Postgres-backed apps — fan-out publish, presence, projects, API keys, webhooks, and operational stats."
license = "MIT"
repository = "https://github.com/brumehq/brume-rest-rust"
documentation = "https://docs.brume.run"

[lib]
doctest = false

[dependencies]
bytes = "1.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

